[package]
name = "todx"
version = "0.1.0"
authors = ["Akshay2642005 <akshay2642005@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
im-rc = "15.0.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
